--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 <hr />
 
 
+<div class="copyright"> Copyright 2019 <br/> Curated by Kim Frank Richardson  <br/> Website Design by Kevin James Richardson Abbott</div>
 </div>
 </div>
 
