More updates- added some bootstrap functionality

--- a/index.html
+++ b/index.html
@@ -1,33 +1,62 @@
 <!DOCTYPE html>
 <HTML>
+    
 
 <head>
 
 <title>Richardson Family History</title>
 <link rel="stylesheet" type="text/css" href="index.css" />
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
 </head>
 
 <body>
 
+<div class="backsplash">
+<!-- The backsplash div is for the background color -->
+
 <div class="content_background">
-<div class="center">
+<!-- The content_background div is for the background of the actual content which floats above the backsplash -->
 
 <div class="search">
-
 <input type="text" placeholder="Search.." class="search-bar" name="search-bar">
-
 </div>
 
 
-<div class="logo">
+<div class="row logo">
         <img src="logo.png" alt = "Website Logo">
 </div>
 
 <hr />
 
+<div class="content">
+    
+
+On July 11, 1981, the Richardson family and the Jones family were linked with the marriage of Kim Frank Richardson of Florida and Carol Anne Jones of Pennsylvania. This website seeks to house and chronicle the history/ancestry of both families for personal use, researchers, and future generations. Within these archives you'll find stories of love, war records, and get a small window into our lives.<br/> <br/>
+
+Nam lacinia et justo nec mollis. Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent ornare massa tellus, eget pellentesque neque lobortis eget. Etiam sit amet velit metus. Sed id risus nibh. Mauris in mi at turpis volutpat gravida vel vitae dui. Nunc luctus quam non leo suscipit vulputate. Nam vel sagittis lectus. Phasellus rutrum tellus ut quam ornare blandit. <br/><br/>
+
+Duis tempus interdum faucibus. Nam fringilla nulla sit amet pulvinar accumsan. Sed risus erat, laoreet sit amet ullamcorper id, tempus eget odio. Integer ac tincidunt neque. Nunc eu arcu ligula. Aenean rhoncus elit ut est accumsan laoreet. Donec elementum iaculis quam sed eleifend. Nam quis interdum sem. Proin suscipit massa nibh, a pretium nisl lobortis in. Maecenas ac urna eget neque accumsan euismod. Suspendisse eget dignissim tortor. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Duis viverra ornare turpis, sit amet porttitor lacus suscipit sit amet. Ut nec volutpat eros. Suspendisse at lectus commodo, imperdiet enim eu, imperdiet quam. Nullam at tempus sem. <br/> <br/>
+
+Maecenas quis interdum purus. Etiam imperdiet, ipsum sed sodales dictum, purus nibh auctor leo, a pretium nunc mi non nisi. Nunc lorem augue, pretium at urna non, faucibus suscipit mauris. Aliquam pellentesque quam justo, id rhoncus lectus pulvinar eu. Etiam eu mollis nisl, eget aliquam libero. Duis suscipit eros et augue auctor vestibulum. Donec fermentum eros non ex feugiat, a porta odio faucibus. </br><br/>
+
+Curabitur feugiat nisl non augue malesuada scelerisque. Ut aliquet porttitor scelerisque. Fusce mi nulla, blandit vel nisl sit amet, sollicitudin lobortis libero. Ut lobortis lectus sed commodo imperdiet. Maecenas sed hendrerit magna, a tempus libero. Integer vitae convallis dui. Phasellus eu gravida enim, sed tristique elit. Vestibulum porta rutrum velit, sit amet fermentum quam pellentesque sagittis. Nullam id posuere leo. Proin non fringilla felis. Mauris luctus, sem at feugiat luctus, dui nulla tristique mi, non pharetra turpis dolor sit amet dolor. Proin mollis fermentum pretium. Nullam non metus lectus. Cras sed nulla at mauris tincidunt tincidunt at eu nisi. <br/> <br/>
+
+</div>
+
+<hr/>
+
+
 
 <div class="copyright"> Copyright 2019 <br/> Curated by Kim Frank Richardson  <br/> Website Design by Kevin James Richardson Abbott</div>
+</div>
+
+<div class= "amazon">
+<a href="https://www.amazon.com/Far-Side-Silence-Robert-Marcus-ebook/dp/B00ENOVQSY" target="_blank" alt = "Amazon Ad for The Far Side of Silence">
+<img src="amazonBanner.png">
+</a>
+</div>
+
 </div>
 </div>
 
