--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ Duis tempus interdum faucibus. Nam fringilla nulla sit amet pulvinar accumsan. S
 
 Maecenas quis interdum purus. Etiam imperdiet, ipsum sed sodales dictum, purus nibh auctor leo, a pretium nunc mi non nisi. Nunc lorem augue, pretium at urna non, faucibus suscipit mauris. Aliquam pellentesque quam justo, id rhoncus lectus pulvinar eu. Etiam eu mollis nisl, eget aliquam libero. Duis suscipit eros et augue auctor vestibulum. Donec fermentum eros non ex feugiat, a porta odio faucibus. </br><br/>
 
-Curabitur feugiat nisl non augue malesuada scelerisque. Ut aliquet porttitor scelerisque. Fusce mi nulla, blandit vel nisl sit amet, sollicitudin lobortis libero. Ut lobortis lectus sed commodo imperdiet. Maecenas sed hendrerit magna, a tempus libero. Integer vitae convallis dui. Phasellus eu gravida enim, sed tristique elit. Vestibulum porta rutrum velit, sit amet fermentum quam pellentesque sagittis. Nullam id posuere leo. Proin non fringilla felis. Mauris luctus, sem at feugiat luctus, dui nulla tristique mi, non pharetra turpis dolor sit amet dolor. Proin mollis fermentum pretium. Nullam non metus lectus. Cras sed nulla at mauris tincidunt tincidunt at eu nisi. <br/> <br/>
+Curabitur feugiat nisl non augue malesuada scelerisque. Ut aliquet porttitor scelerisque. Fusce mi nulla, blandit vel nisl sit amet, sollicitudin lobortis libero. Ut lobortis lectus sed commodo imperdiet. Maecenas sed hendrerit magna, a tempus libero. Integer vitae convallis dui. Phasellus eu gravida enim, sed tristique elit. Vestibulum porta rutrum velitwewfw3rt4q3v, sit amet fermentum quam pellentesque sagittis. Nullam id posuere leo. Proin non fringilla felis. Mauris luctus, sem at feugiat luctus, dui nulla tristique mi, non pharetra turpis dolor sit amet dolor. Proin mollis fermentum pretium. Nullam non metus lectus. Cras sed nulla at mauris tincidunt tincidunt at eu nisi. <br/> <br/>
 
 </div>
 
@@ -49,6 +49,10 @@ Curabitur feugiat nisl non augue malesuada scelerisque. Ut aliquet porttitor sce
 
 
 <div class="copyright"> Copyright 2019 <br/> Curated by Kim Frank Richardson  <br/> Website Design by Kevin James Richardson Abbott</div>
+</div>
+
+<div class="mail">
+    
 </div>
 
 <div class= "amazon">
