this better work

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
 <div class="backsplash">
 <!-- The backsplash div is for the background color -->
 
+<div class="mail">
+<a href="mailto:carkfr@gmail.com"><img src="mail.jpg">Contact Us</a>         
+</div>
+
 <div class="content_background">
 <!-- The content_background div is for the background of the actual content which floats above the backsplash -->
 
@@ -49,10 +53,6 @@ Curabitur feugiat nisl non augue malesuada scelerisque. Ut aliquet porttitor sce
 
 
 <div class="copyright"> Copyright 2019 <br/> Curated by Kim Frank Richardson  <br/> Website Design by Kevin James Richardson Abbott</div>
-</div>
-
-<div class="mail">
-    
 </div>
 
 <div class = "amazon">
